# dot-vault

./: .gitignore  README.md  justfile  pyproject.toml
scripts/: activate_venv.sh  setup.sh
src/dot_vault/: __main__.py  constants.py  errors.py  modules.py  paths.py  pretty_print.py  settings.py  shell.py
tests/: test_check_installed.py
