[project]
name = "dot-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "doctyper>=0.25.0",
    "pydantic>=2.13.4",
]

[project.scripts]
dot-vault = "dot_vault.__main__:app"

[tool.uv]
package=true

[tool.basedpyright]
reportImplicitStringConcatenation = false
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
