[project]
name = "dot-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cflowpy>=0.3.0",
    "doctyper>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
]

[project.scripts]
dot-vault = "dot_vault.__main__:app"

[tool.uv]
package=true

[tool.basedpyright]
reportImplicitStringConcatenation = false
reportExplicitAny = false
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "rust-just>=1.55.1",
]
