[project]
name = "dot-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cflowpy>=0.4.0",
    "doctyper>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
]

[project.scripts]
dot-vault = "dot_vault.__main__:app"

[tool.uv]
package=true

[tool.ruff]
# Ignoring E701 (multiple statements on one line (colon))
# to make use of very short match statements in the `cflowpy` library.
# f.e. the following snippet allows easy returning of an error and unpacking of an
# optional value:
#     match optional_value:
#        case Err(err): return Err(err)
#        case Ok(value): pass
ignore = ["E701"]

[tool.basedpyright]
reportImplicitStringConcatenation = false
reportExplicitAny = false
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "rust-just>=1.55.1",
]
